배경 색상 6종 추가

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -43,5 +43,11 @@
         <item>background_color9</item>
         <item>background_color10</item>
         <item>background_color11</item>
+        <item>background_color12</item>
+        <item>background_color13</item>
+        <item>background_color14</item>
+        <item>background_color15</item>
+        <item>background_color16</item>
+        <item>background_color17</item>
     </string-array>
 </resources>
